typing in emacs is pita atm

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello World from index.html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>My 1st Bitstarter</title>
+    <link type="text/css" rel="stylesheet"
+	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+    <style type="text/css">
+	body {
+	  padding=top: 20px;
+	  padding-bottom: 40px;
+	}
+	.container {
+	  width: 960px;
+	}
+
+	div.row {
+	  border: 1px solid;
+	}
+    </style>
+  </head>
+  <body>
+	I'm gona use git to fetch this file from there to local pc and edit it in a more appropriate tool then emacs in a ssh
+  </body>
+</html>
