--- a/index.html
+++ b/index.html
@@ -67,13 +67,15 @@
 			Video
 		</div>
 		<div class="span6">
-			Thermometer
-		</div>
-		<div class="order">
-			Order
-		</div>
-		<div class="social">
-			Social
+			<div class="thermometer">
+				Thermometer
+			</div>
+			<div class="order">
+				Order
+			</div>
+			<div class="social">
+				Social
+			</div>
 		</div>
 	</div>
 	<div class="row section1">
