--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
     </style>
   </head>
   <body>
-	<!-- I'm gona use git to fetch this file from there to local pc and edit it in a more appropriate tool then emacs in a ssh 
-	great idea to switch to an editor with syntax highlighting, tag autocomplete and other advanced features. increased sped and accuracy FTW
-	-->
 	<div class="container">
 		<div class="row navigation">
 			<div class="span2 logo">
-				Logo
+				Project Logo
 			</div>
 			<div class="span6 blank">
 				Blank
