--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My 1st Bitstarter</title>
+    <title>My 1st Bitstarter :: v 0.001 ::</title>
     <link type="text/css" rel="stylesheet"
 	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
@@ -87,12 +87,24 @@
 	</div>
 	<div class="row faq">
 		<div class="span12">
-			FAQ
+			FAQ & button 
+			<a class="coinbase-button" data-code="68ea4c82f62e4799df1ac502ab634baf" href="https://coinbase.com/checkouts/68ea4c82f62e4799df1ac502ab634baf">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 		</div>
 	</div>
 	<div class="row footer">
 		<div class="span12">
-			Footer
+			<!-- AddThis Button BEGIN -->
+			<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+			<a class="addthis_button_preferred_1"></a>
+			<a class="addthis_button_preferred_2"></a>
+			<a class="addthis_button_preferred_3"></a>
+			<a class="addthis_button_preferred_4"></a>
+			<a class="addthis_button_compact"></a>
+			<a class="addthis_counter addthis_bubble_style"></a>
+			</div>
+			<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+			<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52150be84701e744"></script>
+			<!-- AddThis Button END -->
 		</div>
 	</div>
 	</div>
