--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 	</div>
 	<div class="row pitch">
 		<div class="span6 video">
-			Video
+			actually it is my 0 bitstarter project since in IT we index from zero.
 		</div>
 		<div class="span6">
 			<div class="thermometer">
-				Thermometer
+				Bazinga
 			</div>
 			<div class="order">
-				Order
+				Order (pre-order)
 			</div>
 			<div class="social">
 				Social
