--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My 1st Bitstarter :: v 0.001 ::</title>
+    <title>My 1st Bitstarter :: v 0.003 ::</title>
     <link type="text/css" rel="stylesheet"
 	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
@@ -85,9 +85,9 @@
 			Marketing Section 2
 		</div>
 	</div>
-	<div class="row faq">
+	<div class="row buttons">
 		<div class="span12">
-			FAQ & button 
+			buttons<br> 
 			<a class="coinbase-button" data-code="68ea4c82f62e4799df1ac502ab634baf" href="https://coinbase.com/checkouts/68ea4c82f62e4799df1ac502ab634baf">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 		</div>
 	</div>
