--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My 1st Bitstarter :: v 0.004 ::</title>
+    <title>My 1st Bitstarter :: v 0.006 ::</title>
     <link type="text/css" rel="stylesheet"
 	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
@@ -40,18 +40,18 @@
 	<div class="container">
 		<div class="row navigation">
 			<div class="span2 logo">
-				Project Logo
+				no logo
 			</div>
 			<div class="span6 blank">
-				Blank
+				blank ;)
 			</div>
 			<div class="span4 about">
-				About
+				top right corner
 			</div>
 		</div>
 	<div class="row heading">
 		<div class="span12">
-			<h1>Bitstarter Title</h1>
+			<h1>Bitstarter for UAV competition</h1>
 		</div>
 	</div>
 	<div class="row subheading">
@@ -61,7 +61,7 @@
 	</div>
 	<div class="row pitch">
 		<div class="span6 video">
-			actually it is my 0 bitstarter project since in IT we index from zero.
+			Actually it is my 0th bitstarter project since in IT we index from zero. There will be real fundraising going on in October 2013. At the moment this is only about the startup engineering class at coursera.org and myself learning JavaScript and responsive design. 
 		</div>
 		<div class="span6">
 			<div class="thermometer">
@@ -87,7 +87,6 @@
 	</div>
 	<div class="row buttons">
 		<div class="span12">
-			buttons<br> 
 			<a class="coinbase-button" data-code="68ea4c82f62e4799df1ac502ab634baf" href="https://coinbase.com/checkouts/68ea4c82f62e4799df1ac502ab634baf">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 		</div>
 	</div>
