--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My 1st Bitstarter :: v 0.006 ::</title>
+    <title>My 1st Bitstarter :: v 0.007 ::</title>
     <link type="text/css" rel="stylesheet"
 	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
@@ -77,17 +77,18 @@
 	</div>
 	<div class="row section1">
 		<div class="span12">
-			Marketing Section 1
+			My goal is to polish this site before October 2013 to help fundraise for THE real project. We'll be flying over Australian desert dropping bottles of life saving water from UAVs. Please visit us later (after September 30 2013) or let's meet  in person (in the Luxembourg hackerspace syn2cat in Strassen).<br>
+			In the meantime site's purpose is to pass the Coursera class titled "Startup engineering".
 		</div>
 	</div>
 	<div class="row section2">
 		<div class="span12">
-			Marketing Section 2
+			We'll be fundraising for UAV elecronics, cameras and plane building parts. Full list not available yet.
 		</div>
 	</div>
 	<div class="row buttons">
 		<div class="span12">
-			<a class="coinbase-button" data-code="68ea4c82f62e4799df1ac502ab634baf" href="https://coinbase.com/checkouts/68ea4c82f62e4799df1ac502ab634baf">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+			<a class="coinbase-button" data-code="68ea4c82f62e4799df1ac502ab634baf" href="https://coinbase.com/checkouts/68ea4c82f62e4799df1ac502ab634baf">Support With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 		</div>
 	</div>
 	<div class="row footer">
