--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My 1st Bitstarter :: v 0.007 ::</title>
+    <title>My 1st Bitstarter :: v 0.008 ::</title>
     <link type="text/css" rel="stylesheet"
 	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
@@ -61,7 +61,7 @@
 	</div>
 	<div class="row pitch">
 		<div class="span6 video">
-			Actually it is my 0th bitstarter project since in IT we index from zero. There will be real fundraising going on in October 2013. At the moment this is only about the startup engineering class at coursera.org and myself learning JavaScript and responsive design. 
+			Actually it is my 0th bitstarter project since in IT we index from zero. 
 		</div>
 		<div class="span6">
 			<div class="thermometer">
@@ -77,6 +77,7 @@
 	</div>
 	<div class="row section1">
 		<div class="span12">
+			There will be real fundraising going on in October 2013. At the moment this is only about the startup engineering class at coursera.org and myself learning JavaScript and responsive design. <br>
 			My goal is to polish this site before October 2013 to help fundraise for THE real project. We'll be flying over Australian desert dropping bottles of life saving water from UAVs. Please visit us later (after September 30 2013) or let's meet  in person (in the Luxembourg hackerspace syn2cat in Strassen).<br>
 			In the meantime site's purpose is to pass the Coursera class titled "Startup engineering".
 		</div>
