started responsive design
typing css stuff

--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My 1st Bitstarter :: v 0.008 ::</title>
+    <title>My 1st Bitstarter :: v 0.009 ::</title>
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
+    <script src="js/bootstrap.js"></script>
     <link type="text/css" rel="stylesheet"
 	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
+
+    /* large desktop - response 1/3 */
+    @media (min-width: 980px) {
+    	body {
+    		padding-top: 60px;
+    	}
+    	.linediv-l {
+    		border-right: 1px white solid;
+    	}
+    	.linediv-r {
+    		border-left: 1px white solid;
+    	}
+    }
+
 	body {
 	  padding=top: 20px;
 	  padding-bottom: 40px;
