--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My 1st Bitstarter :: v 0.009 ::</title>
+    <title>My 1st Bitstarter :: v 0.010 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
@@ -55,6 +55,26 @@
     </style>
   </head>
   <body>
+
+  	<div class="navbar navbar-inverse navbar-fixed-top">
+  		<div class="navbar-inner">
+  			<div class="container">
+  				<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+  					<span class="icon-bar"></span>
+  					<span class="icon-bar"></span>
+  					<span class="icon-bar"></span>
+  				</button>
+  				<a class="brand" href="#">Bitstarter</a>
+  				<div class="nav-collapse collapse">
+  					<ul class="nav">
+  						<li class="active"><a href="#">Home</a></li>
+  						<li><a href="#about">About</a></li>
+  						<li><a href="#contact">Contact</a></li>
+  					</ul>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
 	<div class="container">
 		<div class="row navigation">
 			<div class="span2 logo">
