--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My 1st Bitstarter :: v 0.010 ::</title>
+    <title>My 1st Bitstarter :: v 0.011 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
@@ -11,7 +11,7 @@
 	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
 
-    /* large desktop - response 1/3 */
+    /* large desktop */
     @media (min-width: 980px) {
     	body {
     		padding-top: 60px;
@@ -24,6 +24,42 @@
     	}
     }
 
+    /* "landscape phones and down" */
+    @media (max-width: 480px){
+    	.copy {
+    		padding: 2.5% 10%;
+    	}
+    	.linediv-l {
+    		border-bottom: 1px white solid;
+    	}
+    	.linediv-r {
+    		border-top: 1px white solid;
+    	}
+    }
+
+	/* main body and headings */
+	body{
+		font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	}
+	.heading, .subheading {
+		font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+		text-align: center;
+	}
+	p.lead {
+		padding-top: 1.5%;
+		font-size: 24px;
+		line-height: 30px;
+	}
+	p {
+		font-size: 18px;
+		line-height: 24px;
+	}
+
+
+
+
+
+    /* old code */
 	body {
 	  padding=top: 20px;
 	  padding-bottom: 40px;
@@ -75,6 +111,25 @@
   			</div>
   		</div>
   	</div>
+
+  	<div class="container">
+  		<div class="row-fluid heading">
+  			<div class="span12">
+  				<h1>Product</h1>
+  			</div>
+  		</div>
+  	</div>
+  	<div class="row-fluid subheading">
+  		<div class="span12">
+  			<p class="lead">One sentence description.</p>
+  		</div>
+  	</div>
+  	<div class="row-fluid pitch">
+  		<div class="span5 offset1 video">
+  			<img class="img-polaroid" src="">
+  		</div>
+  	</div>
+
 	<div class="container">
 		<div class="row navigation">
 			<div class="span2 logo">
