--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My 1st Bitstarter :: v 0.011 ::</title>
+    <title>My 1st Bitstarter :: v 0.012 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
@@ -54,10 +54,25 @@
 		font-size: 18px;
 		line-height: 24px;
 	}
+	/* video pitch and action*/
+	.pitch {
+		padding: 2.5% 0%;
+	}
+	.order {
+		padding: 2% 0%;
+	}
+	.actions {
+		background-color: #343434;
+		padding: 3% 0%;
+	}
+	.video, .thermometer, .order, .social, .statistics {
+		text-aligh: center;
+	}
+	.statistics h3, .statistics p {
+		color: white;
+	}
 
-
-
-
+	/* Marketing Copy and Footer */
 
     /* old code */
 	body {
