--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My 1st Bitstarter :: v 0.012 ::</title>
+    <title>My 1st Bitstarter :: v 0.013 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
@@ -141,10 +141,34 @@
   	</div>
   	<div class="row-fluid pitch">
   		<div class="span5 offset1 video">
-  			<img class="img-polaroid" src="">
+  			<img class="img-polaroid" src="http://placehold.it/480x300">
+  		</div>
+  		<!-- new actions div to contain statistics, order, and share buttons -->
+  		<div class="span5 actions">
+  			<div class="span8 offset2">
+  				<div class="statistics">
+  					<div class="span4">
+  						<div class="linediv-l">
+  							<h3>1000</h3><p>backers</p>
+  						</div>
+  					</div>
+  					<div class="span4">
+  						<div class="linediv-c">
+  							<h3>$6000</h3><p>of $10,000</p>
+  						</div>
+  					</div>
+  					<div class="span4">
+  						<div class="linediv-r">
+  							<h3>30</h3><p>days left</p>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
+
   		</div>
   	</div>
 
+  	<!-- old code start -->
 	<div class="container">
 		<div class="row navigation">
 			<div class="span2 logo">
@@ -217,5 +241,7 @@
 		</div>
 	</div>
 	</div>
+  	<!-- old code end -->
+
   </body>
 </html>
