--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My 1st Bitstarter :: v 0.013 ::</title>
+    <title>My 1st Bitstarter :: v 0.014 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
@@ -164,7 +164,20 @@
   					</div>
   				</div>
   			</div>
-
+  			<div class="span10 offset1">
+  				<!-- progress bar -->
+  				<div class="thermometer progress active">
+  					<div class="bar bar-success" style="width: 60%;"></div>
+  					<div class="bar bar-warning" style="width: 40%;"></div>
+  				</div>
+  			</div>
+  			<div class="span6 offset3 order">
+  				<button class="btn btn-success btn-large">Preorder</button>
+  			</div>
+  			<div class="span8 offset2 social">
+  				<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+  				<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+  			</div>
   		</div>
   	</div>
 
