--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My 1st Bitstarter :: v 0.014 ::</title>
+    <title>My 1st Bitstarter :: v 0.015 ::</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
@@ -66,42 +66,30 @@
 		padding: 3% 0%;
 	}
 	.video, .thermometer, .order, .social, .statistics {
-		text-aligh: center;
+		text-align: center;
 	}
 	.statistics h3, .statistics p {
 		color: white;
 	}
 
 	/* Marketing Copy and Footer */
-
-    /* old code */
-	body {
-	  padding=top: 20px;
-	  padding-bottom: 40px;
+	.copy {
+		padding-top: 2.5%;
+		padding-bottom: 2.5%;
+		text-align: justify;
 	}
-	.container {
-	  width: 960px;
+	.asset {
+		padding: 2.5% 0%;
 	}
-	p.lead {
-		padding-top: 15px;
-	}
-	.navigation, .pitch, .section1, .section2, .faq, .footer {
-		padding: 10px 0px 10px 0px;
-	}
-	.video, .thermometer, .order, .social {
-		border: 1px dotted;
+	.footer {
+		color: #cccccc;
 		text-align: center;
 	}
-	.video {
-		height: 124px;
-		line-height: 124px;
+	.footer p {
+		font-size: 11px;
 	}
-	.thermometer, .order, .social {
-		height: 40px;
-		line-height: 40px;
-	}
-	div.row {
-	  border: 1px solid;
+	.footer a {
+		color: #ccccff;
 	}
     </style>
   </head>
