--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.019 :: Bitstarter forge</title>
+    <title>:: v 0.02 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -176,6 +176,50 @@
   		</div>
   	</div>
 
+  	<div class="row-fluid section1">
+  		<div class="span5 offset1 asset">
+  			<img class="img-polaroid" src="http://placehold.it/480x300">
+  		</div>
+  		<div class="span5 copy">
+  			<p>
+  				Lorem ipsum The marketing copy uses the text-align CSS
+				property to justify the text and the img-polaroid
+				Bootstrap class to style the images, but is
+				otherwise fairly straightforward. As with the
+				content further up the page, the overall content
+				is structured as two five column spans, each
+				offset 1 span from the side
+				https://developer.mozilla.org/en-US/docs/Web/
+				CSS/text-align
+				http://twitter.github.io/bootstrap/base-
+				css.html#images
+				http://placehold.it
+  			</p>
+  		</div>
+  	</div>
+
+  	<div class="row-fluid section2">
+  		<div class="span5 offset1 copy copy-right">
+  			<p>
+  				Lorem ipsum The marketing copy uses the text-align CSS
+				property to justify the text and the img-polaroid
+				Bootstrap class to style the images, but is
+				otherwise fairly straightforward. As with the
+				content further up the page, the overall content
+				is structured as two five column spans, each
+				offset 1 span from the side
+				https://developer.mozilla.org/en-US/docs/Web/
+				CSS/text-align
+				http://twitter.github.io/bootstrap/base-
+				css.html#images
+				http://placehold.it
+  			</p>
+  		</div>
+  		<div class="span5 asset">
+  			<img class="img-polaroid" src="http://placehold.it/480x300">
+  		</div>
+  	</div>
+
   	<!-- old code start -->
 	<div class="container">
 		<div class="row navigation">
@@ -189,39 +233,42 @@
 				top right corner
 			</div>
 		</div>
-	<div class="row heading">
-		<div class="span12">
-			<h1>Bitstarter for UAV competition</h1>
-		</div>
-	</div>
-	<div class="row subheading">
-		<div class="span12">
-			<p class="lead">this is my 1st bitstarter project.</p>
-		</div>
-	</div>
-	<div class="row pitch">
-		<div class="span6 video">
-			Actually it is my 0th bitstarter project since in IT we index from zero. 
-		</div>
-		<div class="span6">
-			<div class="thermometer">
-				Bazinga
-			</div>
-			<div class="order">
-				Order (pre-order)
-			</div>
-			<div class="social">
-				Social
+		<div class="row heading">
+			<div class="span12">
+				<h1>Bitstarter for UAV competition</h1>
 			</div>
 		</div>
-	</div>
-	<div class="row section1">
-		<div class="span12">
-			There will be real fundraising going on in October 2013. At the moment this is only about the startup engineering class at coursera.org and myself learning JavaScript and responsive design. <br>
-			My goal is to polish this site before October 2013 to help fundraise for THE real project. We'll be flying over Australian desert dropping bottles of life saving water from UAVs. Please visit us later (after September 30 2013) or let's meet  in person (in the Luxembourg hackerspace syn2cat in Strassen).<br>
-			In the meantime site's purpose is to pass the Coursera class titled "Startup engineering".
+		<div class="row subheading">
+			<div class="span12">
+				<p class="lead">this is my 1st bitstarter project.</p>
+			</div>
+		</div>
+		<div class="row pitch">
+			<div class="span6 video">
+				Actually it is my 0th bitstarter project since in IT we index from zero. 
+			</div>
+			<div class="span6">
+				<div class="thermometer">
+					Bazinga
+				</div>
+				<div class="order">
+					Order (pre-order)
+				</div>
+				<div class="social">
+					Social
+				</div>
+			</div>
+		</div>
+		<div class="row section1">
+			<div class="span12">
+				There will be real fundraising going on in October 2013. At the moment this is only about the startup engineering class at coursera.org and myself learning JavaScript and responsive design. <br>
+				My goal is to polish this site before October 2013 to help fundraise for THE real project. We'll be flying over Australian desert dropping bottles of life saving water from UAVs. Please visit us later (after September 30 2013) or let's meet  in person (in the Luxembourg hackerspace syn2cat in Strassen).<br>
+				In the meantime site's purpose is to pass the Coursera class titled "Startup engineering".
+			</div>
 		</div>
 	</div>
+  	<!-- old code end -->	
+
 	<div class="row section2">
 		<div class="span12">
 			We'll be fundraising for UAV elecronics, cameras and plane building parts. Full list not available yet.
@@ -235,7 +282,7 @@
 	<div class="row footer">
 		<div class="span12">
 			<!-- AddThis Button BEGIN -->
-			<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+		<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 			<a class="addthis_button_preferred_1"></a>
 			<a class="addthis_button_preferred_2"></a>
 			<a class="addthis_button_preferred_3"></a>
@@ -248,8 +295,11 @@
 			<!-- AddThis Button END -->
 		</div>
 	</div>
+	<div class="row-fluid footer">
+		<div class="span12">
+			<p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>, without all the cruft that would otherwise be put at the bottom of the page.</p>
+		</div>
 	</div>
-  	<!-- old code end -->
 
   </body>
 </html>
