--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.023 :: Bitstarter forge</title>
+    <title>:: v 0.024 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -168,11 +168,11 @@
   			</div>
 
   			<div class="span6 offset3 order">
-				<div class="row buttons">
-					<div class="span6">
+				<!-- div class="row buttons">
+					<div class="span6" -->
 						<a class="coinbase-button" data-code="68ea4c82f62e4799df1ac502ab634baf" href="https://coinbase.com/checkouts/68ea4c82f62e4799df1ac502ab634baf">Support With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
-					</div>
-				</div>
+					<!-- /div>
+				</div -->
   			</div>
 
   			<div class="span8 offset2 social">
