--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.024 :: Bitstarter forge</title>
+    <title>:: v 0.025 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -125,13 +125,13 @@
   	<div class="container">
   		<div class="row-fluid heading">
   			<div class="span12">
-  				<h1>Product</h1>
+  				<h1>UAV for the next competition</h1>
   			</div>
   		</div>
   	</div>
   	<div class="row-fluid subheading">
   		<div class="span12">
-  			<p class="lead">One sentence description.</p>
+  			<p class="lead">Dropping bottled water to targets in the desert, on autopilot.</p>
   		</div>
   	</div>
   	<div class="row-fluid pitch">
@@ -144,12 +144,12 @@
   				<div class="statistics">
   					<div class="span4">
   						<div class="linediv-l">
-  							<h3>1000</h3><p>backers</p>
+  							<h3>1</h3><p>backer</p>
   						</div>
   					</div>
   					<div class="span4">
   						<div class="linediv-c">
-  							<h3>$6000</h3><p>of $10,000</p>
+  							<h3>$5</h3><p>of $3,000</p>
   						</div>
   					</div>
   					<div class="span4">
@@ -162,8 +162,8 @@
   			<div class="span10 offset1">
   				<!-- progress bar -->
   				<div class="thermometer progress active">
-  					<div class="bar bar-success" style="width: 60%;"></div>
-  					<div class="bar bar-warning" style="width: 40%;"></div>
+  					<div class="bar bar-success" style="width: 1%;"></div>
+  					<div class="bar bar-warning" style="width: 99%;"></div>
   				</div>
   			</div>
 
@@ -176,8 +176,18 @@
   			</div>
 
   			<div class="span8 offset2 social">
-  				<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-  				<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+				<!-- AddThis Button BEGIN -->
+				<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+				<a class="addthis_button_preferred_1"></a>
+				<a class="addthis_button_preferred_2"></a>
+				<a class="addthis_button_preferred_3"></a>
+				<a class="addthis_button_preferred_4"></a>
+				<a class="addthis_button_compact"></a>
+				<a class="addthis_counter addthis_bubble_style"></a>
+				</div>
+				<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+				<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52150be84701e744"></script>
+				<!-- AddThis Button END -->
   			</div>
   		</div>
   	</div>
@@ -188,18 +198,9 @@
   		</div>
   		<div class="span5 copy">
   			<p>
-  				Lorem ipsum The marketing copy uses the text-align CSS
-				property to justify the text and the img-polaroid
-				Bootstrap class to style the images, but is
-				otherwise fairly straightforward. As with the
-				content further up the page, the overall content
-				is structured as two five column spans, each
-				offset 1 span from the side
-				https://developer.mozilla.org/en-US/docs/Web/
-				CSS/text-align
-				http://twitter.github.io/bootstrap/base-
-				css.html#images
-				http://placehold.it
+ 				There will be real fundraising going on in October 2013. At the moment this is only about the startup engineering class at coursera.org and myself learning JavaScript, new frameworks and responsive design basics.<br>
+				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAV will be flying over Australian desert dropping bottled water on a target (simulating life saving support). Please visit us later (after September 30 2013) or let's meet in person (in Luxembourg - hackerspace in Strassen).<br>
+				In the meantime site's purpose is to pass the Coursera class titled "Startup engineering".
   			</p>
   		</div>
   	</div>
@@ -207,18 +208,7 @@
   	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>
-  				Lorem ipsum The marketing copy uses the text-align CSS
-				property to justify the text and the img-polaroid
-				Bootstrap class to style the images, but is
-				otherwise fairly straightforward. As with the
-				content further up the page, the overall content
-				is structured as two five column spans, each
-				offset 1 span from the side
-				https://developer.mozilla.org/en-US/docs/Web/
-				CSS/text-align
-				http://twitter.github.io/bootstrap/base-
-				css.html#images
-				http://placehold.it
+  				We'll be fundraising for more UAV elecronics, plane building parts and cameras. Full list not available yet. More info in the meantime available in the openpilot forum.
   			</p>
   		</div>
   		<div class="span5 asset">
@@ -226,31 +216,10 @@
   		</div>
   	</div>
 
-	<div class="row section2">
-		<div class="span12">
-			We'll be fundraising for UAV elecronics, cameras and plane building parts. Full list not available yet.
-		</div>
-	</div>
-
-	<div class="row footer">
-		<div class="span12">
-			<!-- AddThis Button BEGIN -->
-		<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-			<a class="addthis_button_preferred_1"></a>
-			<a class="addthis_button_preferred_2"></a>
-			<a class="addthis_button_preferred_3"></a>
-			<a class="addthis_button_preferred_4"></a>
-			<a class="addthis_button_compact"></a>
-			<a class="addthis_counter addthis_bubble_style"></a>
-			</div>
-			<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-			<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52150be84701e744"></script>
-			<!-- AddThis Button END -->
-		</div>
-	</div>
 	<div class="row-fluid footer">
 		<div class="span12">
 			<p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>, without all the cruft that would otherwise be put at the bottom of the page.</p>
+			<p>Some materials are borrowed from the <a href="http://www.openpilot.org">Open Pilot</a> website. I hope to apply skills from this course to provide one project with a crowd financing solution</p>
 		</div>
 	</div>
 
