--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.025 :: Bitstarter forge</title>
+    <title>:: v 0.1 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -125,13 +125,13 @@
   	<div class="container">
   		<div class="row-fluid heading">
   			<div class="span12">
-  				<h1>UAV for the next competition</h1>
+  				<h1>building UAVs for the next competition</h1>
   			</div>
   		</div>
   	</div>
   	<div class="row-fluid subheading">
   		<div class="span12">
-  			<p class="lead">Dropping bottled water to targets in the desert, on autopilot.</p>
+  			<p class="lead">Dropping bottled water in the desert, on autopilot.</p>
   		</div>
   	</div>
   	<div class="row-fluid pitch">
@@ -144,7 +144,7 @@
   				<div class="statistics">
   					<div class="span4">
   						<div class="linediv-l">
-  							<h3>1</h3><p>backer</p>
+  							<h3>2</h3><p>backers</p>
   						</div>
   					</div>
   					<div class="span4">
@@ -154,7 +154,7 @@
   					</div>
   					<div class="span4">
   						<div class="linediv-r">
-  							<h3>30</h3><p>days left</p>
+  							<h3>99</h3><p>days left</p>
   						</div>
   					</div>
   				</div>
@@ -200,7 +200,7 @@
   			<p>
  				There will be real fundraising going on in October 2013. At the moment this is only about the startup engineering class at coursera.org and myself learning JavaScript, new frameworks and responsive design basics.<br>
 				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAV will be flying over Australian desert dropping bottled water on a target (simulating life saving support). Please visit us later (after September 30 2013) or let's meet in person (in Luxembourg - hackerspace in Strassen).<br>
-				In the meantime site's purpose is to pass the Coursera class titled "Startup engineering".
+				Current site's purpose is to pass the Coursera class titled "Startup engineering".
   			</p>
   		</div>
   	</div>
@@ -208,7 +208,7 @@
   	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>
-  				We'll be fundraising for more UAV elecronics, plane building parts and cameras. Full list not available yet. More info in the meantime available in the openpilot forum.
+  				With the final version we'll be fundraising for more UAV elecronics, plane building parts and cameras. Full list not available yet. The research is still going on, as the prototype flights go on alternatives are tested, improvements are made and as far as I know the final design is still work in progress. The $3,000 is Kenn's estimate of the costs of electronics for the final planes that will take part in the competition. 
   			</p>
   		</div>
   		<div class="span5 asset">
@@ -218,8 +218,8 @@
 
 	<div class="row-fluid footer">
 		<div class="span12">
-			<p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>, without all the cruft that would otherwise be put at the bottom of the page.</p>
-			<p>Some materials are borrowed from the <a href="http://www.openpilot.org">Open Pilot</a> website. I hope to apply skills from this course to provide one project with a crowd financing solution</p>
+			<p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>, without all the cruft that would otherwise be put at the bottom of the page.<br>
+			Some materials are borrowed from the <a href="http://www.openpilot.org">Open Pilot</a> website. I hope to apply skills from this course to provide one project with a crowd financing solution</p>
 		</div>
 	</div>
 
