011 bitcoin button broken, not changing layout on small screens
further issues
- missing about/faq/contact
- missing images

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.1 :: Bitstarter forge</title>
+    <title>:: v 0.11 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -136,7 +136,7 @@
   	</div>
   	<div class="row-fluid pitch">
   		<div class="span5 offset1 video">
-  			<img class="img-polaroid" src="http://placehold.it/480x300">
+  			<img class="img-polaroid" src="http://placehold.it/540x2800">
   		</div>
   		<!-- new actions div to contain statistics, order, and share buttons -->
   		<div class="span5 actions">
@@ -144,7 +144,7 @@
   				<div class="statistics">
   					<div class="span4">
   						<div class="linediv-l">
-  							<h3>2</h3><p>backers</p>
+  							<h3>2</h3><p>backers (*)</p>
   						</div>
   					</div>
   					<div class="span4">
@@ -168,11 +168,11 @@
   			</div>
 
   			<div class="span6 offset3 order">
-				<!-- div class="row buttons">
-					<div class="span6" -->
+				<div class="row buttons">
+					<!-- div class="span6" -->
 						<a class="coinbase-button" data-code="68ea4c82f62e4799df1ac502ab634baf" href="https://coinbase.com/checkouts/68ea4c82f62e4799df1ac502ab634baf">Support With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
-					<!-- /div>
-				</div -->
+					<!-- /div-->
+				</div>
   			</div>
 
   			<div class="span8 offset2 social">
@@ -194,13 +194,14 @@
 
   	<div class="row-fluid section1">
   		<div class="span5 offset1 asset">
-  			<img class="img-polaroid" src="http://placehold.it/480x300">
+  			<img class="img-polaroid" src="http://placehold.it/540x280">
   		</div>
   		<div class="span5 copy">
   			<p>
- 				There will be real fundraising going on in October 2013. At the moment this is only about the startup engineering class at coursera.org and myself learning JavaScript, new frameworks and responsive design basics.<br>
-				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAV will be flying over Australian desert dropping bottled water on a target (simulating life saving support). Please visit us later (after September 30 2013) or let's meet in person (in Luxembourg - hackerspace in Strassen).<br>
-				Current site's purpose is to pass the Coursera class titled "Startup engineering".
+ 				(*) Actually only 1 backer, me, tested twice. The info is static and I update it manually according to notifications from coinbase.<br>
+				Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
+ 				There will be real fundraising going on in October 2013. At the moment this is only about the startup engineering class at coursera.org and myself learning JavaScript, current frameworks for web development and responsive design basics.<br>
+				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAV will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later.
   			</p>
   		</div>
   	</div>
@@ -208,11 +209,11 @@
   	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>
-  				With the final version we'll be fundraising for more UAV elecronics, plane building parts and cameras. Full list not available yet. The research is still going on, as the prototype flights go on alternatives are tested, improvements are made and as far as I know the final design is still work in progress. The $3,000 is Kenn's estimate of the costs of electronics for the final planes that will take part in the competition. 
+  				With the final version we'll be fundraising for more UAV elecronics, plane parts and cameras. Full list not available yet. The $3,000 is Kenn's estimate of the costs of electronics for the final planes that will take part in the competition. 
   			</p>
   		</div>
   		<div class="span5 asset">
-  			<img class="img-polaroid" src="http://placehold.it/480x300">
+  			<img class="img-polaroid" src="http://placehold.it/540x280">
   		</div>
   	</div>
 
