--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.11 :: Bitstarter forge</title>
+    <title>:: v 0.12 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -136,7 +136,7 @@
   	</div>
   	<div class="row-fluid pitch">
   		<div class="span5 offset1 video">
-  			<img class="img-polaroid" src="http://placehold.it/540x2800">
+  			<img class="img-polaroid" src="http://placehold.it/540x280">
   		</div>
   		<!-- new actions div to contain statistics, order, and share buttons -->
   		<div class="span5 actions">
@@ -200,16 +200,37 @@
   			<p>
  				(*) Actually only 1 backer, me, tested twice. The info is static and I update it manually according to notifications from coinbase.<br>
 				Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
- 				There will be real fundraising going on in October 2013. At the moment this is only about the startup engineering class at coursera.org and myself learning JavaScript, current frameworks for web development and responsive design basics.<br>
-				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAV will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later.
+ 				There will be real fundraising going on in October 2013. At the moment this is only about the startup engineering class project for coursera.org and myself learning new stuff. Here mostly JavaScript, current frameworks for web development and responsive design basics.
   			</p>
   		</div>
   	</div>
 
-  	<div class="row-fluid section2">
+	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>
-  				With the final version we'll be fundraising for more UAV elecronics, plane parts and cameras. Full list not available yet. The $3,000 is Kenn's estimate of the costs of electronics for the final planes that will take part in the competition. 
+				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course rather a fully featured fundraising website.
+  			</p>
+  		</div>
+  		<div class="span5 asset">
+  			<img class="img-polaroid" src="http://placehold.it/540x280">
+  		</div>
+  	</div>
+
+  	<div class="row-fluid section3">
+  		<div class="span5 offset1 asset">
+  			<img class="img-polaroid" src="http://placehold.it/540x280">
+  		</div>
+  		<div class="span5 copy">
+  			<p>
+				Thanks to Stanford University for CS183, Coursera.org for this one, Strassen comune for the Luxembourg hackerspace and Kenn for the idea for my course project.
+  			</p>
+  		</div>
+  	</div>
+
+  	<div class="row-fluid section4">
+  		<div class="span5 offset1 copy copy-right">
+  			<p>
+  				With the final version of this site we'll be fundraising for more UAV elecronics, plane parts and cameras. Full list not available yet. The $3,000 is Kenn's estimate of the costs of electronics for the final planes that will take part in the competition. The prototype he's using at the moment does not require any urgent funding so there's no reason to donate now.
   			</p>
   		</div>
   		<div class="span5 asset">
