013 minor fixes (typos)
small changes in texts. still no images

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>
-				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course rather a fully featured fundraising website.
+				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course rather then a fully featured fundraising website.
   			</p>
   		</div>
   		<div class="span5 asset">
@@ -230,7 +230,7 @@
   	<div class="row-fluid section4">
   		<div class="span5 offset1 copy copy-right">
   			<p>
-  				With the final version of this site we'll be fundraising for more UAV elecronics, plane parts and cameras. Full list not available yet. The $3,000 is Kenn's estimate of the costs of electronics for the final planes that will take part in the competition. The prototype he's using at the moment does not require any urgent funding so there's no reason to donate now.
+  				With the final version of this site we'll be fundraising for more UAV elecronics, plane parts and cameras. The $3,000 is a preliminary estimate of the costs of electronics for the competition planes and will be updated when the fundraising really starts. The prototype used at the moment does not require any urgent funding so there's no reason to donate now.
   			</p>
   		</div>
   		<div class="span5 asset">
