--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.12 :: Bitstarter forge</title>
+    <title>:: v 0.13 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -180,8 +180,8 @@
 				<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 				<a class="addthis_button_preferred_1"></a>
 				<a class="addthis_button_preferred_2"></a>
-				<a class="addthis_button_preferred_3"></a>
-				<a class="addthis_button_preferred_4"></a>
+				<!--a class="addthis_button_preferred_3"></a-->
+				<!--a class="addthis_button_preferred_4"></a-->
 				<a class="addthis_button_compact"></a>
 				<a class="addthis_counter addthis_bubble_style"></a>
 				</div>
@@ -194,7 +194,7 @@
 
   	<div class="row-fluid section1">
   		<div class="span5 offset1 asset">
-  			<img class="img-polaroid" src="http://placehold.it/540x280">
+  			<img class="img-polaroid" src="img/1.png">
   		</div>
   		<div class="span5 copy">
   			<p>
@@ -212,13 +212,13 @@
   			</p>
   		</div>
   		<div class="span5 asset">
-  			<img class="img-polaroid" src="http://placehold.it/540x280">
+  			<img class="img-polaroid" src="img/2.png">
   		</div>
   	</div>
 
   	<div class="row-fluid section3">
   		<div class="span5 offset1 asset">
-  			<img class="img-polaroid" src="http://placehold.it/540x280">
+  			<img class="img-polaroid" src="http://9to5passion.eu/3.png">
   		</div>
   		<div class="span5 copy">
   			<p>
