014 images finally working
noticed broken social buttons centering
after removing more addthis options

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.13 :: Bitstarter forge</title>
+    <title>:: v 0.14 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -136,7 +136,7 @@
   	</div>
   	<div class="row-fluid pitch">
   		<div class="span5 offset1 video">
-  			<img class="img-polaroid" src="http://placehold.it/540x280">
+  			<img class="img-polaroid" src="http://industrial.sk/img/3.png">
   		</div>
   		<!-- new actions div to contain statistics, order, and share buttons -->
   		<div class="span5 actions">
@@ -194,13 +194,13 @@
 
   	<div class="row-fluid section1">
   		<div class="span5 offset1 asset">
-  			<img class="img-polaroid" src="img/1.png">
+  			<img class="img-polaroid" src="http://industrial.sk/img/1.png">
   		</div>
   		<div class="span5 copy">
   			<p>
  				(*) Actually only 1 backer, me, tested twice. The info is static and I update it manually according to notifications from coinbase.<br>
 				Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
- 				There will be real fundraising going on in October 2013. At the moment this is only about the startup engineering class project for coursera.org and myself learning new stuff. Here mostly JavaScript, current frameworks for web development and responsive design basics.
+ 				There will be real fundraising going on in October 2013. At the moment this is only about the class project and myself learning new stuff. Here mostly current frameworks for web development and responsive design basics.
   			</p>
   		</div>
   	</div>
@@ -208,17 +208,17 @@
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>
-				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course rather then a fully featured fundraising website.
+				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course class rather then a fully featured fundraising website.
   			</p>
   		</div>
   		<div class="span5 asset">
-  			<img class="img-polaroid" src="img/2.png">
+  			<img class="img-polaroid" src="http://industrial.sk/img/2.png">
   		</div>
   	</div>
 
   	<div class="row-fluid section3">
   		<div class="span5 offset1 asset">
-  			<img class="img-polaroid" src="http://9to5passion.eu/3.png">
+  			<img class="img-polaroid" src="http://industrial.sk/img/3.png">
   		</div>
   		<div class="span5 copy">
   			<p>
@@ -230,11 +230,11 @@
   	<div class="row-fluid section4">
   		<div class="span5 offset1 copy copy-right">
   			<p>
-  				With the final version of this site we'll be fundraising for more UAV elecronics, plane parts and cameras. The $3,000 is a preliminary estimate of the costs of electronics for the competition planes and will be updated when the fundraising really starts. The prototype used at the moment does not require any urgent funding so there's no reason to donate now.
+  				With the final version of this site we'll be fundraising for UAV elecronics, plane parts and cameras. The $3,000 is a preliminary estimate of the costs of electronics for the competition planes and will be updated when the fundraising really starts. The prototype used at the moment does not require any urgent funding so there's no reason to donate now.
   			</p>
   		</div>
   		<div class="span5 asset">
-  			<img class="img-polaroid" src="http://placehold.it/540x280">
+  			<img class="img-polaroid" src="http://industrial.sk/img/1.png">
   		</div>
   	</div>
 
