015 small layout changes
images ok, buttons still wrong

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.14 :: Bitstarter forge</title>
+    <title>:: v 0.15 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -222,7 +222,12 @@
   		</div>
   		<div class="span5 copy">
   			<p>
-				Thanks to Stanford University for CS183, Coursera.org for this one, Strassen comune for the Luxembourg hackerspace and Kenn for the idea for my course project.
+				Thanks to:<br> 
+				Stanford University for CS183, CS106, and other online study materials;<br> 
+				Coursera.org for courses like this one;<br> 
+				Strassen comune for the Luxembourg hackerspace;<br> 
+				heroku, amazon and quantumkiwi for hosting;<br>
+				and Kenn for the idea for this project.
   			</p>
   		</div>
   	</div>
