--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.15 :: Bitstarter forge</title>
+    <title>:: v 0.16 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -170,7 +170,7 @@
   			<div class="span6 offset3 order">
 				<div class="row buttons">
 					<!-- div class="span6" -->
-						<a class="coinbase-button" data-code="68ea4c82f62e4799df1ac502ab634baf" href="https://coinbase.com/checkouts/68ea4c82f62e4799df1ac502ab634baf">Support With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+						<a class="coinbase-button" data-code="f031c1e05af51db96cb9e6a168c734e6" data-button-style="donation_large" href="https://coinbase.com/checkouts/f031c1e05af51db96cb9e6a168c734e6">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 					<!-- /div-->
 				</div>
   			</div>
@@ -180,8 +180,8 @@
 				<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 				<a class="addthis_button_preferred_1"></a>
 				<a class="addthis_button_preferred_2"></a>
-				<!--a class="addthis_button_preferred_3"></a-->
-				<!--a class="addthis_button_preferred_4"></a-->
+				<a class="addthis_button_preferred_3"></a>
+				<a class="addthis_button_preferred_4"></a>
 				<a class="addthis_button_compact"></a>
 				<a class="addthis_counter addthis_bubble_style"></a>
 				</div>
