017 btc button broken again
adding anchors & absolute paths in menu urls

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.16 :: Bitstarter forge</title>
+    <title>:: v 0.17 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -113,9 +113,9 @@
   				<a class="brand" href="#">Bitstarter</a>
   				<div class="nav-collapse collapse">
   					<ul class="nav">
-  						<li class="active"><a href="#">Home</a></li>
-  						<li><a href="#about">About</a></li>
-  						<li><a href="#contact">Contact</a></li>
+  						<li class="active"><a href="http://9to5passion.eu/#">Home</a></li>
+  						<li><a href="http://9to5passion.eu/#about">About</a></li>
+  						<li><a href="http://9to5passion.eu/#contact">Contact</a></li>
   					</ul>
   				</div>
   			</div>
