--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.17 :: Bitstarter forge</title>
+    <title>:: v 0.18 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -105,12 +105,12 @@
   	<div class="navbar navbar-inverse navbar-fixed-top">
   		<div class="navbar-inner">
   			<div class="container">
-  				<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+  				<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="nav-collapse">
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   				</button>
-  				<a class="brand" href="#">Bitstarter</a>
+  				<a class="brand" href="http://9to5passion.eu/#">Bitstarter</a>
   				<div class="nav-collapse collapse">
   					<ul class="nav">
   						<li class="active"><a href="http://9to5passion.eu/#">Home</a></li>
