--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.18 :: Bitstarter forge</title>
+    <title>:: v 0.19 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -105,7 +105,7 @@
   	<div class="navbar navbar-inverse navbar-fixed-top">
   		<div class="navbar-inner">
   			<div class="container">
-  				<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="nav-collapse">
+  				<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
@@ -207,8 +207,8 @@
 
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
-  			<p>
-				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course class rather then a fully featured fundraising website.
+  			<p><a href="#about">
+				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course class rather then a fully featured fundraising website. We'll be fundraising for UAV elecronics, plane parts and cameras. The $3,000 is a preliminary estimate of the costs of electronics for the competition planes and will be updated when the fundraising really starts.
   			</p>
   		</div>
   		<div class="span5 asset">
@@ -234,8 +234,9 @@
 
   	<div class="row-fluid section4">
   		<div class="span5 offset1 copy copy-right">
-  			<p>
-  				With the final version of this site we'll be fundraising for UAV elecronics, plane parts and cameras. The $3,000 is a preliminary estimate of the costs of electronics for the competition planes and will be updated when the fundraising really starts. The prototype used at the moment does not require any urgent funding so there's no reason to donate now.
+  			<p><a href="#contact">
+  				Contact:<br>
+  				for flight demos visit hackerspace Strassen, Luxembourg
   			</p>
   		</div>
   		<div class="span5 asset">
