--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.19 :: Bitstarter forge</title>
+    <title>:: v 0.20 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -110,12 +110,12 @@
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   				</button>
-  				<a class="brand" href="http://9to5passion.eu/#">Bitstarter</a>
+  				<a class="brand" href="#">Bitstarter</a>
   				<div class="nav-collapse collapse">
   					<ul class="nav">
-  						<li class="active"><a href="http://9to5passion.eu/#">Home</a></li>
-  						<li><a href="http://9to5passion.eu/#about">About</a></li>
-  						<li><a href="http://9to5passion.eu/#contact">Contact</a></li>
+  						<li class="active"><a href="#">Home</a></li>
+  						<li><a href="#about">About</a></li>
+  						<li><a href="#contact">Contact</a></li>
   					</ul>
   				</div>
   			</div>
@@ -207,7 +207,7 @@
 
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
-  			<p><a href="#about">
+  			<p><a href="#about" />
 				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course class rather then a fully featured fundraising website. We'll be fundraising for UAV elecronics, plane parts and cameras. The $3,000 is a preliminary estimate of the costs of electronics for the competition planes and will be updated when the fundraising really starts.
   			</p>
   		</div>
@@ -234,7 +234,7 @@
 
   	<div class="row-fluid section4">
   		<div class="span5 offset1 copy copy-right">
-  			<p><a href="#contact">
+  			<p><a href="#contact" />
   				Contact:<br>
   				for flight demos visit hackerspace Strassen, Luxembourg
   			</p>
