022 link to amazon
no idea why on heroku button broken while on amazon it works

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.21 :: Bitstarter forge</title>
+    <title>:: v 0.22 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -198,7 +198,7 @@
   		</div>
   		<div class="span5 copy">
   			<p>
- 				(*) Actually only 1 backer, me, tested twice. The info is static and I update it manually according to notifications from coinbase.<br>
+ 				(*) <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">button works on amazon hosted (staging) environment</a>. On heroku broken at the moment. And actually only 1 backer, me, tested twice. The info is static and I update it manually according to notifications from coinbase.<br>
 				Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
  				There will be real fundraising going on in October 2013. At the moment this is only about the class project and myself learning new stuff. Here mostly current frameworks for web development and responsive design basics.
   			</p>
