--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.22 :: Bitstarter forge</title>
+    <title>:: v 0.23 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -207,7 +207,7 @@
 
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
-  			<p><a name="#about"></a>
+  			<p><a id="#about"></a>
 				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course class rather then a fully featured fundraising website. We'll be fundraising for UAV elecronics, plane parts and cameras. The $3,000 is a preliminary estimate of the costs of electronics for the competition planes and will be updated when the fundraising really starts.
   			</p>
   		</div>
@@ -224,17 +224,19 @@
   			<p>
 				Thanks to:<br> 
 				Stanford University for CS183, CS106, and other online study materials;<br> 
-				Coursera.org for courses like this one;<br> 
-				Strassen comune for the Luxembourg hackerspace;<br> 
-				heroku, amazon and quantumkiwi for hosting;<br>
-				and Kenn for the idea for this project.
+				<a href="https://www.coursera.org/">Coursera.org</a> for courses like this one;<br> 
+				<a href="http://www.strassen.lu/">Strassen comune</a> for the Luxembourg <a href="http://www.hackerspace.lu/">hackerspace</a>;<br> 
+				<a href="http://heroku.com/">heroku</a>, 
+				<a href="http://aws.amazon.com/">amazon</a> and 
+				<a href="http://www.quantumkiwi.com/">quantumkiwi</a> for <a href="http://en.wikipedia.org/wiki/Category:Web_hosting">hosting</a>;<br>
+				and <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project.
   			</p>
   		</div>
   	</div>
 
   	<div class="row-fluid section4">
   		<div class="span5 offset1 copy copy-right">
-  			<p><a label="#contact"></a>
+  			<p><a id="#contact"></a>
   				Contact:<br>
   				for flight demos visit hackerspace Strassen, Luxembourg
   			</p>
