--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>:: v 0.25 :: Bitstarter forge</title>
+    <title>:: v 0.26 :: Bitstarter forge</title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -200,14 +200,14 @@
   			<p>
  				(*) <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">button works on amazon hosted (staging) environment</a>. On heroku broken at the moment. And actually only 1 backer, me, tested twice. The info is static and I update it manually according to notifications from coinbase.<br>
 				Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
- 				There will be real fundraising going on in October 2013. At the moment this is only about the class project and myself learning new stuff. Here mostly current frameworks for web development and responsive design basics.
+ 				There will be real fundraising going on in October 2013. At the moment this is only about the class project and myself learning new stuff. Here mostly current frameworks for web development and responsive design basics.<a id="about"></a>
   			</p>
   		</div>
   	</div>
 
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
-  			<p>About:<br><a id="about"></a>
+  			<p>About:<br>
 				My goal is to polish this site before October 2013 to help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit this site later and postpone your donations to late September 2013 or later. Current site is a working prototype for the course class rather then a fully featured fundraising website. We'll be fundraising for UAV elecronics, plane parts and cameras. The $3,000 is a preliminary estimate of the costs of electronics for the competition planes and will be updated when the fundraising really starts.
   			</p>
   		</div>
